# Agentic-AI

blog_post/: README.md  pyproject.toml
blog_post/src/blog_post/: crew.py  main.py
blog_post/src/blog_post/config/: agents.yaml  tasks.yaml
