[project]
name = "blog_post"
version = "0.1.0"
description = "blog-post using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "databricks>=0.2",
    "databricks-sdk"
]

[project.scripts]
blog_post = "blog_post.main:run"
run_crew = "blog_post.main:run"
train = "blog_post.main:train"
replay = "blog_post.main:replay"
test = "blog_post.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
